Projet GL/test/src/test/deca/syntax/invalid/public.res
src/test/deca/syntax/invalid/public.deca:6:15: no viable alternative at input 'publicinta'
